salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/OSFMX_TransactionRecordMultipagos__c.object-meta.xml
<CustomObject>
    <description>Almacena el estatus más reciente de los intentos de pago hacía Multipagos desde la vista de facturación en el portal web de clientes.</description>
    <label>Registro De Transacción Multipagos</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Registro De Transacción Multipagos Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros De Transacción Multipagos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>