salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_CuentaContrato__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CuentaContrato__c</fullName>
    <description>Identificador único de la cuenta contrato asociada al cliente en el sistema SAP, retornado por el servicio web Denodo.</description>
    <label>Cuenta Contrato</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>