salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_IsMultipagosErrorResponse__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IsMultipagosErrorResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Es verdadera cuando Multipagos invocó la visualforce de respuesta de error del portal del clientes.</description>
    <label>Respuesta de Error de Multipagos</label>
    <type>Checkbox</type>
</CustomField>