salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_IsMultipagosSuccessfulResponse__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IsMultipagosSuccessfulResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Es verdadera cuando Multipagos invocó la visualforce de respuesta exitosa del portal del clientes.</description>
    <label>Respuesta Exitosa de Multipagos</label>
    <type>Checkbox</type>
</CustomField>