salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_IsValidMpSignature__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IsValidMpSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿HASH Valido?</label>
    <type>Checkbox</type>
</CustomField>