salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_LastEvent__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_LastEvent__c</fullName>
    <description>Clasificación del evento más reciente registrado.</description>
    <label>Último Evento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Botón Pagar Presionado</fullName>
            </value>
            <value>
                <fullName>Respuesta Exitosa Cheque en Línea</fullName>
            </value>
            <value>
                <fullName>Respuesta de Ficha Impresa CIE</fullName>
            </value>
            <value>
                <fullName>Respuesta de Error Cheque en Línea</fullName>
            </value>
            <value>
                <fullName>Respuesta de Error Transferencia CIE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>