salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_MpAmount__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpAmount__c</fullName>
    <description>Monto total del cobro o pago.</description>
    <label>Importe total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>