salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_MpAuthorization__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpAuthorization__c</fullName>
    <description>Id que el banco emisor ha otorgado como aprobación.</description>
    <label>Número de Aprobación Bancaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>