salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_MpPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpPaymentMethod__c</fullName>
    <label>Tipo de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>