salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_MpResponse__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpResponse__c</fullName>
    <description>Código del estado de la transacción según el medio de pago.</description>
    <label>Código de respuesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>