salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_MpResponsemsg__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpResponsemsg__c</fullName>
    <description>Descripción del estado de la transacción según el medio de pago.</description>
    <label>Descripción de respuesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>