salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_MpSignature__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpSignature__c</fullName>
    <description>Cadena cifrada generada utilizando llave privada,  concatenación de los parámetros “mp_order + mp_reference + mp_amount + mp_authorization”, y algoritmo “HASH SHA-256”.</description>
    <label>HASH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>