salesforce_sfdx/main/default/objects/OSFMX_TransactionRecordMultipagos__c/fields/OSFMX_Referencia_Factura__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Referencia_Factura__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Identificador único del documento Factura, retornado por el servicio web Denodo.</description>
    <externalId>true</externalId>
    <label>Referencia Factura</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>